@@ -113,6 +113,9 @@
 	<li>The DT element no longer applies an italic style (PR
 	#5178)</li>
 
+	<li>HTMLDOC now ignores content inside a STYLE element
+	(PR #5183)</li>
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
